--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ facebook_id: # your facebook id
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 
-contact_note: >
+contact_note: <b> Address  &#58 TPR2 05.22, 163 Av. de Luminy, 13009, Marseille, France </b>
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
