--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -15,7 +15,7 @@
       institution: Université Aix-Marseille, France
       year: Dec.2022- 
       
-    - title: Mater of Science (Quantum Fields and Fundamental Forces)
+    - title: Master of Science (Quantum Fields and Fundamental Forces)
       institution: Imperial College London, UK
       year: 2020-2021
 
